--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/oshea-patrick/slackbot#readme",
   "dependencies": {
-    "firebase": "^9.19.1",
-    "firebase-tools": "^11.25.2"
+    "@slack/events-api": "^3.0.1",
+    "@slack/web-api": "^6.8.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
   }
 }
